# civitai-fetcher

./: README.md  init.sh  mkdocs.yml  pyproject.toml
src/: civitai.py  db.py  mdgenerator.py  metadata.py  models.py  run.py  tensorreader.py  utils.py
src/templates/: index.md.j2  model.md.j2
